Mon Jan 29 16:57:53 2001  Nicola Pero  <nicola@brainstorm.co.uk>

	* GNUmakefile.in (install): Create the
	$GNUSTEP_MAKEFILES/Additional directory.
	* brain.make: Moved base, gui, xgps and xdps specific code into
	makefiles created and installed into $GNUSTEP_MAKEFILES/Additional
	by the base, gui, xgps and xdps packages themselves.
	* common.make: Include all makefiles found in
	$GNUSTEP_LOCAL_ADDITIONAL_MAKEFILES and
	$GNUSTEP_MAKEFILES/Additional.
	* config.make.in: (GRAPHIC_LIBS), (GRAPHIC_CFLAGS),
	(GRAPHIC_LFLAGS), (X_PRE_LIBS): Removed.
	(CONFIG_SYSTEM_DEFS): Removed SYSTEM_DEFS and DPS_DEFINE.
	* configure.in: Moved base, gui, xgps and xdps specific code 
	into the configure.in inside each library.
	
2001-01-25 Richard Frith-Macdonald <rfm@gnu.org>

	* configure.in: Added check for recent versions of GMP
	* configure: Regenerated.

Mon Jan 22 12:55:13 2001  Nicola Pero  <nicola@brainstorm.co.uk>

	* configure.in (LD_LIBRARY_PATH): set it before running the tests
	to fix problems in executing tests against a shared libobjc.
	* configure: Regenerated.
	
2001-01-19  Nicola Pero  <nicola@brainstorm.co.uk>

	* spec-debug-rules.template: Bug fix: removed a '/' at the end of
	INSTALL_ROOT_DIR.

2001-01-18  Adam Fedor  <fedor@gnu.org>

	* opentool.in: Fix typo in setting GNUSTEP_HOST_LDIR

Thu Jan 18 18:07:36 2001  Nicola Pero  <nicola@brainstorm.co.uk>

	* spec-debug-rules.template: Speed up filtering.

2001-01-18  Mirko Viviani  <mirko.viviani@rccr.cremona.it>

	* tool.make: modified to build framework tools. (installed in the
	framework resource dir)
	* rules.make (%.build): build framework tools.
	* framework.make: updated docs.

Thu Jan 18 12:15:11 2001  Nicola Pero  <nicola@brainstorm.co.uk>

	* gnustep-make.spec.in: Do a make distclean before running
	configure.
	
2001-01-17  Adam Fedor  <fedor@gnu.org>

	* library.make: Revert last change, add LIBRARY_INSTALL_DIR
	which replaces GNUSTEP_LIBRARIES.